private-dormitory/force-app/main/default/objects/Case/fields/Is_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Is_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the resident requested to remain anonymous when submitting this complaint. If checked, resident identity must not be disclosed to other parties during investigation.</description>
    <inlineHelpText>Check this box if you do not want your name to be shared with the other party during the investigation.</inlineHelpText>
    <label>Is Anonymous</label>
    <type>Checkbox</type>
</CustomField>