private-dormitory/force-app/main/default/objects/Case/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Room__c record associated with the social issue. Helps Admin identify involved parties and room context.</description>
    <inlineHelpText>The room where the issue is occurring.</inlineHelpText>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>