private-dormitory/force-app/main/default/objects/Case/fields/Status_by_Admin__c.field-meta.xml
<CustomField>
    <fullName>Status_by_Admin__c</fullName>
    <label>Status by Admin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>