private-dormitory/force-app/main/default/objects/Case/recordTypes/Maintenance_Case_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Case_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Maintenance Support Process</businessProcess>
    <description>Used for all physical issues and repair requests submitted by residents.  Covers plumbing, electrical, furniture, pest control, mold, and other  facility-related problems. Assigned to the Handyman Queue for resolution.</description>
    <label>Maintenance Case Record Type</label>
</RecordType>