private-dormitory/force-app/main/default/objects/Case/recordTypes/Social_Case_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Social_Case_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Social Support Process</businessProcess>
    <description>Used for social and interpersonal issues between residents, such as  roommate conflicts and noise complaints. Follows a structured resolution  path including investigation and scheduled meetings with the Administrator.</description>
    <label>Social Case Record Type</label>
</RecordType>